--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
   </section>
 
-  <section id="contact" class="section">
+ <section id="contact" class="section hidden"> 
     <h2>📧 Contact Me</h2>
     <p>Email: <a href="mailto:udaydeore006@gmail.com">udaydeore006@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/uday-deore-5949bb32a" target="_blank">in/uday-deore-5949bb32a</a></p>
@@ -90,15 +90,7 @@
 
   <footer>
     <p>© 2025 Uday Deore | All Rights Reserved</p>
-    <p>
-        Visitors: 
-        <img src="https://visitor-badge.glitch.me/badge?page_id=AlwaysUday006.portfolio" alt="Visitor Count" style="vertical-align: middle;">
-    </p>
   </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
 
   <script src="script.js"></script>
 </body>
