--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-N8YV08FTFV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N8YV08FTFV');
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uday Deore | Portfolio</title>
   <link rel="stylesheet" href="style.css">
