--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
   <section id="projects" class="section"> 
     <h2>✨ Projects</h2>
+    
     <div class="project-card hidden">
       <h3>🔐 Vigenère Cipher Tool</h3>
       <p>A Python-based encryption tool to encode and decode text.</p>
@@ -87,9 +88,18 @@
         <a href="https://github.com/AlwaysUday006/PascalCase-to-snake_case-Converter.git" target="_blank" class="project-btn github-btn">View on GitHub</a>
       </div>
     </div>
-  </section>
 
- <section id="contact" class="section hidden"> 
+    <div class="project-card hidden">
+      <h3>🧮 Square Root Finder (Bisection Method)</h3>
+      <p>A Python program that finds the square root of a number using the Bisection Method, a precise numerical approach that repeatedly halves an interval to approximate roots efficiently.</p>
+      <div class="project-links">
+        <a href="https://alwaysuday006-sqrt-by-bisection-app-o4nyqa.streamlit.app/" target="_blank" class="project-btn demo-btn">View Project</a>
+        <a href="https://github.com/AlwaysUday006/sqrt_by_bisection.git" target="_blank" class="project-btn github-btn">View on GitHub</a>
+      </div>
+    </div>
+    </section>
+
+  <section id="contact" class="section hidden"> 
     <h2>📧 Contact Me</h2>
     <p>Email: <a href="mailto:udaydeore006@gmail.com">udaydeore006@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/uday-deore-5949bb32a" target="_blank">in/uday-deore-5949bb32a</a></p>
