--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </button>
       <ul class="nav-links" id="nav-menu">
         <li><a href="#about">About</a></li>
+        <li><a href="#certs">Certifications</a></li> 
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -50,9 +51,21 @@
     </p>
   </section>
 
+  <section id="certs" class="section hidden">
+    <h2>🏆 Certifications</h2>
+    <div class="project-card hidden">
+      <!-- <h3>Python for Data Science</h3>
+      <p>Issued by IBM via Coursera. Covered data analysis, Pandas, and NumPy.</p> -->
+      <a href="[Your Verification Link 1]" target="_blank" class="project-btn demo-btn">View Credential</a>
+    </div>
+    <div class="project-card hidden">
+      <!-- <h3>Fundamentals of Deep Learning</h3>
+      <p>Issued by NVIDIA. Focused on neural networks and GPU acceleration.</p> -->
+      <a href="[Your Verification Link 2]" target="_blank" class="project-btn demo-btn">View Credential</a>
+    </div>
+    </section>
   <section id="projects" class="section"> 
     <h2>✨ Projects</h2>
-    
     <div class="project-card hidden">
       <h3>🔐 Vigenère Cipher Tool</h3>
       <p>A Python-based encryption tool to encode and decode text.</p>
@@ -97,7 +110,8 @@
         <a href="https://github.com/AlwaysUday006/sqrt_by_bisection.git" target="_blank" class="project-btn github-btn">View on GitHub</a>
       </div>
     </div>
-    </section>
+
+  </section>
 
   <section id="contact" class="section hidden"> 
     <h2>📧 Contact Me</h2>
