--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
       </div>
     </div>
 
+    <div class="project-card hidden">
+      <h3>🧮 Arithmetic Formatter</h3>
+      <p>A Python project that neatly arranges arithmetic problems vertically and side by side — optionally displaying answers.</p>
+      <div class="project-links">
+        <a href="https://alwaysuday006-arithmetic-formatter-app-y3tbrj.streamlit.app/" target="_blank" class="project-btn demo-btn">View Project</a>
+        <a href="https://github.com/AlwaysUday006/arithmetic_formatter.git" target="_blank" class="project-btn github-btn">View on GitHub</a>
+      </div>
+    </div>
+
   </section>
 
   <section id="contact" class="section hidden"> 
