--- a/index.html
+++ b/index.html
@@ -125,7 +125,15 @@
       </div>
     </div>
 
-  </section>
+    <div class="project-card hidden">
+      <h3>🔐 Password Generator</h3>
+      <p>A Python-based tool that generates strong, random, and customizable passwords for improved online security — available as both a CLI program and an interactive Streamlit web app.</p>
+      <div class="project-links">
+        <a href="https://alwaysuday006-password-generator-app-uj6mmb.streamlit.app/" target="_blank" class="project-btn demo-btn">View Project</a>
+        <a href="https://github.com/AlwaysUday006/password_generator.git" target="_blank" class="project-btn github-btn">View on GitHub</a>
+      </div>
+    </div>
+    </section>
 
   <section id="contact" class="section hidden"> 
     <h2>📧 Contact Me</h2>
