--- a/index.html
+++ b/index.html
@@ -137,7 +137,24 @@
           </div>
         </div>
 
-    </div>
+        <div class="project-card hidden">
+          <h3>📊 Simple Data Visualizer</h3>
+          <p>A Python script using Matplotlib to read CSV data and generate customizable charts (bar, line, scatter).</p>
+          <div class="project-links">
+            <a href="https://alwaysuday006-data-visualizer-app-abc12d.streamlit.app/" target="_blank" class="project-btn demo-btn">View Project</a>
+            <a href="https://github.com/AlwaysUday006/simple-data-visualizer.git" target="_blank" class="project-btn github-btn">View on GitHub</a>
+          </div>
+        </div>
+
+        <div class="project-card hidden">
+          <h3>🧭 Custom Shortest Path Finder</h3>
+          <p>An interactive Python and Streamlit-based project that lets users build their own graph, visualize connections, and find the shortest path between nodes dynamically using Dijkstra’s algorithm — perfect for learning and exploring graph theory concepts.</p>
+          <div class="project-links">
+            <a href="https://alwaysuday006-shortest-path-algorithm-app-xf0tpb.streamlit.app/" target="_blank" class="project-btn demo-btn">View Project</a>
+            <a href="https://github.com/AlwaysUday006/shortest_path_algorithm.git" target="_blank" class="project-btn github-btn">View on GitHub</a>
+          </div>
+        </div>
+        </div>
     </section>
 
   <section id="contact" class="section hidden"> 
@@ -154,6 +171,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-<!-- Helloo i am hidden. -->
