--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="keywords" content="Uday Deore, portfolio, Python developer, AI projects, machine learning, web development, B.Tech student, Streamlit apps, data structures, algorithms, GitHub projects">
   <meta name="author" content="Uday Deore">
   <meta name="robots" content="index, follow">
-  <meta name="theme-color" content="#001f3f">
+  <meta name="theme-color" content="#0B1220">
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:type" content="website">
