--- a/index.html
+++ b/index.html
@@ -304,14 +304,14 @@
         <div class="project-card hidden">
           <div class="project-image-container">
             <div class="project-images-slideshow" aria-label="Image slideshow">
-              <img src="https://ik.imagekit.io/alwaysuday/1.png" alt="Vigenère Cipher Tool - Encryption Interface" class="project-image active" loading="lazy" width="600" height="400">
-              <img src="https://ik.imagekit.io/alwaysuday/1(1).png" alt="Vigenère Cipher Tool - Decryption Mode" class="project-image" loading="lazy" width="600" height="400">
-              <img src="https://ik.imagekit.io/alwaysuday/2.png" alt="Vigenère Cipher Tool - Example Output" class="project-image" loading="lazy" width="600" height="400">
+              <img id="vigenere-img-1" src="_" alt="Vigenère Cipher Tool - Encryption Interface" class="project-image active" loading="lazy" width="600" height="400">
+              <img id="vigenere-img-2" src="_" alt="Vigenère Cipher Tool - Decryption Mode" class="project-image" loading="lazy" width="600" height="400">
+              <img id="vigenere-img-3" src="_" alt="Vigenère Cipher Tool - Example Output" class="project-image" loading="lazy" width="600" height="400">
             </div>
             <div class="slideshow-indicators" role="tablist">
-              <span class="indicator active" role="tab" aria-label="View image 1" aria-selected="true"></span>
-              <span class="indicator" role="tab" aria-label="View image 2" aria-selected="false"></span>
-              <span class="indicator" role="tab" aria-label="View image 3" aria-selected="false"></span>
+              <span class="indicator active" role="tab" tabindex="0" aria-label="View image 1" aria-selected="true"></span>
+              <span class="indicator" role="tab" tabindex="0" aria-label="View image 2" aria-selected="false"></span>
+              <span class="indicator" role="tab" tabindex="0" aria-label="View image 3" aria-selected="false"></span>
             </div>
             <div class="project-overlay">
               <span class="overlay-title">Vigenère Cipher Tool</span>
@@ -332,7 +332,7 @@
         
         <div class="project-card hidden">
           <div class="project-image-container">
-            <img src="https://ik.imagekit.io/alwaysuday/1(1).png" alt="Luhn Algorithm Validator Screenshot" class="project-image" loading="lazy" width="600" height="400">
+            <img src="_" alt="Luhn Algorithm Validator Screenshot" class="project-image" loading="lazy" width="600" height="400">
             <div class="project-overlay">
               <span class="overlay-title">Luhn Algorithm Validator</span>
             </div>
@@ -353,12 +353,12 @@
         <div class="project-card hidden">
           <div class="project-image-container">
             <div class="project-images-slideshow" aria-label="Image slideshow">
-              <img src="https://ik.imagekit.io/alwaysuday/3.png" alt="Expense Tracker - Main View" class="project-image active" loading="lazy" width="600" height="400">
-              <img src="https://ik.imagekit.io/alwaysuday/3(1).png" alt="Expense Tracker - Add Expense" class="project-image" loading="lazy" width="600" height="400">
+              <img id="expense-img-1" src="_" alt="Expense Tracker - Main View" class="project-image active" loading="lazy" width="600" height="400">
+              <img id="expense-img-2" src="_" alt="Expense Tracker - Add Expense" class="project-image" loading="lazy" width="600" height="400">
             </div>
             <div class="slideshow-indicators" role="tablist">
-              <span class="indicator active" role="tab" aria-label="View image 1" aria-selected="true"></span>
-              <span class="indicator" role="tab" aria-label="View image 2" aria-selected="false"></span>
+              <span class="indicator active" role="tab" tabindex="0" aria-label="View image 1" aria-selected="true"></span>
+              <span class="indicator" role="tab" tabindex="0" aria-label="View image 2" aria-selected="false"></span>
             </div>
             <div class="project-overlay">
               <span class="overlay-title">Expense Tracker</span>
@@ -379,7 +379,7 @@
         
         <div class="project-card hidden">
           <div class="project-image-container">
-            <img src="https://ik.imagekit.io/alwaysuday/1(2).png" alt="Case Converter Screenshot" class="project-image" loading="lazy" width="600" height="400">
+            <img src="_" alt="Case Converter Screenshot" class="project-image" loading="lazy" width="600" height="400">
             <div class="project-overlay">
               <span class="overlay-title">Case Converter</span>
             </div>
@@ -399,7 +399,7 @@
 
         <div class="project-card hidden">
           <div class="project-image-container">
-            <img src="https://ik.imagekit.io/alwaysuday/1(3).png" alt="Square Root Finder Screenshot" class="project-image" loading="lazy" width="600" height="400">
+            <img src="_" alt="Square Root Finder Screenshot" class="project-image" loading="lazy" width="600" height="400">
             <div class="project-overlay">
               <span class="overlay-title">Square Root Finder</span>
             </div>
@@ -419,7 +419,7 @@
 
         <div class="project-card hidden">
           <div class="project-image-container">
-            <img src="https://ik.imagekit.io/alwaysuday/1(4).png" alt="Arithmetic Formatter Screenshot" class="project-image" loading="lazy" width="600" height="400">
+            <img src="_" alt="Arithmetic Formatter Screenshot" class="project-image" loading="lazy" width="600" height="400">
             <div class="project-overlay">
               <span class="overlay-title">Arithmetic Formatter</span>
             </div>
@@ -440,12 +440,12 @@
         <div class="project-card hidden">
           <div class="project-image-container">
             <div class="project-images-slideshow" aria-label="Image slideshow">
-              <img src="https://ik.imagekit.io/alwaysuday/1(5).png" alt="Password Generator - Main" class="project-image active" loading="lazy" width="600" height="400">
-              <img src="https://ik.imagekit.io/alwaysuday/1(6).png" alt="Password Generator - Options" class="project-image" loading="lazy" width="600" height="400">
+              <img id="password-img-1" src="_" alt="Password Generator - Main" class="project-image active" loading="lazy" width="600" height="400">
+              <img id="password-img-2" src="_" alt="Password Generator - Options" class="project-image" loading="lazy" width="600" height="400">
             </div>
             <div class="slideshow-indicators" role="tablist">
-              <span class="indicator active" role="tab" aria-label="View image 1" aria-selected="true"></span>
-              <span class="indicator" role="tab" aria-label="View image 2" aria-selected="false"></span>
+              <span class="indicator active" role="tab" tabindex="0" aria-label="View image 1" aria-selected="true"></span>
+              <span class="indicator" role="tab" tabindex="0" aria-label="View image 2" aria-selected="false"></span>
             </div>
             <div class="project-overlay">
               <span class="overlay-title">Password Generator</span>
@@ -466,10 +466,18 @@
 
         <div class="project-card hidden">
           <div class="project-image-container">
-            <img src="https://ik.imagekit.io/alwaysuday/1.png" alt="Shortest Path Finder Screenshot" class="project-image" loading="lazy" width="600" height="400">
-            <img src="https://ik.imagekit.io/alwaysuday/2.png" alt="Shortest Path Finder Screenshot" class="project-image" loading="lazy" width="600" height="400">
-            <img src="https://ik.imagekit.io/alwaysuday/3.png" alt="Shortest Path Finder Screenshot" class="project-image" loading="lazy" width="600" height="400">
-            <img src="https://ik.imagekit.io/alwaysuday/4.png" alt="Shortest Path Finder Screenshot" class="project-image" loading="lazy" width="600" height="400">
+            <div class="project-images-slideshow" aria-label="Image slideshow">
+              <img id="shortest-img-1" src="_" alt="Shortest Path Finder - Graph Builder" class="project-image active" loading="lazy" width="600" height="400">
+              <img id="shortest-img-2" src="_" alt="Shortest Path Finder - Visualization" class="project-image" loading="lazy" width="600" height="400">
+              <img id="shortest-img-3" src="_" alt="Shortest Path Finder - Path Highlight" class="project-image" loading="lazy" width="600" height="400">
+              <img id="shortest-img-4" src="_" alt="Shortest Path Finder - Result View" class="project-image" loading="lazy" width="600" height="400">
+            </div>
+            <div class="slideshow-indicators" role="tablist">
+              <span class="indicator active" role="tab" tabindex="0" aria-label="View image 1" aria-selected="true"></span>
+              <span class="indicator" role="tab" tabindex="0" aria-label="View image 2" aria-selected="false"></span>
+              <span class="indicator" role="tab" tabindex="0" aria-label="View image 3" aria-selected="false"></span>
+              <span class="indicator" role="tab" tabindex="0" aria-label="View image 4" aria-selected="false"></span>
+            </div>
             <div class="project-overlay">
               <span class="overlay-title">Shortest Path Finder</span>
             </div>
