index.html modified

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <div id="scroll-progress-bar"></div>
   <div id="lightbox-overlay">
     <span id="lightbox-close" aria-label="Close lightbox">&times;</span>
-    <img id="lightbox-image" src="" alt="Zoomed Certificate">
+  <img id="lightbox-image" src="" alt="Zoomed image">
   </div>
   <header>
     <nav aria-label="Main navigation">
@@ -304,8 +304,8 @@
         <div class="project-card hidden">
           <div class="project-image-container">
             <div class="project-images-slideshow" aria-label="Image slideshow">
-              <img id="vigenere-img-1" src="https://ik.imagekit.io/alwaysuday/1.png?updatedAt=1761032475409" alt="Vigenère Cipher Tool - Encryption Interface" class="project-image active" loading="lazy" width="600" height="400">
-              <img id="vigenere-img-2" src="https://ik.imagekit.io/alwaysuday/13.png?updatedAt=1761035836976" alt="Vigenère Cipher Tool - Decryption Mode" class="project-image" loading="lazy" width="600" height="400">
+              <img id="vigenere-img-1" src="https://ik.imagekit.io/alwaysuday/1.png?updatedAt=1761032475409" alt="Vigenère Cipher Tool - Encryption Interface" class="project-image active" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
+              <img id="vigenere-img-2" src="https://ik.imagekit.io/alwaysuday/13.png?updatedAt=1761035836976" alt="Vigenère Cipher Tool - Decryption Mode" class="project-image" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
             </div>
             <div class="slideshow-indicators" role="tablist">
               <span class="indicator active" role="tab" tabindex="0" aria-label="View image 1" aria-selected="true"></span>
@@ -327,7 +327,7 @@
         
         <div class="project-card hidden">
           <div class="project-image-container">
-            <img src="https://ik.imagekit.io/alwaysuday/2.png?updatedAt=1761032475584" alt="Luhn Algorithm Validator Screenshot" class="project-image" loading="lazy" width="600" height="400">
+            <img id="luhn-img-1" src="https://ik.imagekit.io/alwaysuday/2.png?updatedAt=1761032475584" alt="Luhn Algorithm Validator Screenshot" class="project-image" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
           </div>
           <h3>💳 Luhn Algorithm Validator</h3>
           <p>A Python script to validate credit card numbers and identification numbers.</p>
@@ -345,7 +345,7 @@
         <div class="project-card hidden">
           <div class="project-image-container">
             <div class="project-images-slideshow" aria-label="Image slideshow">
-              <img id="expense-img-1" src="https://ik.imagekit.io/alwaysuday/3.png?updatedAt=1761032475500" alt="Expense Tracker - Main View" class="project-image active" loading="lazy" width="600" height="400">
+              <img id="expense-img-1" src="https://ik.imagekit.io/alwaysuday/3.png?updatedAt=1761032475500" alt="Expense Tracker - Main View" class="project-image active" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
             </div>
           </div>
           <h3>💰 Expense Tracker</h3>
@@ -363,7 +363,7 @@
         
         <div class="project-card hidden">
           <div class="project-image-container">
-            <img src="https://ik.imagekit.io/alwaysuday/4.png?updatedAt=1761032475438" alt="Case Converter Screenshot" class="project-image" loading="lazy" width="600" height="400">
+            <img id="case-img-1" src="https://ik.imagekit.io/alwaysuday/4.png?updatedAt=1761032475438" alt="Case Converter Screenshot" class="project-image" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
           </div>
           <h3>📝 PascalCase / camelCase to snake\_case Converter</h3>
           <p>A Python utility that converts PascalCase or camelCase strings into snake_case format.</p>
@@ -381,8 +381,8 @@
         <div class="project-card hidden">
           <div class="project-image-container">
             <div class="project-images-slideshow" aria-label="Image slideshow">
-              <img id="sqrt-img-1" src="https://ik.imagekit.io/alwaysuday/5.png?updatedAt=1761032475522" alt="Square Root Finder - Main Interface" class="project-image active" loading="lazy" width="600" height="400">
-              <img id="sqrt-img-2" src="https://ik.imagekit.io/alwaysuday/6.png?updatedAt=1761032475516" alt="Square Root Finder - Result View" class="project-image" loading="lazy" width="600" height="400">
+              <img id="sqrt-img-1" src="https://ik.imagekit.io/alwaysuday/5.png?updatedAt=1761032475522" alt="Square Root Finder - Main Interface" class="project-image active" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
+              <img id="sqrt-img-2" src="https://ik.imagekit.io/alwaysuday/6.png?updatedAt=1761032475516" alt="Square Root Finder - Result View" class="project-image" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
             </div>
             <div class="slideshow-indicators" role="tablist">
               <span class="indicator active" role="tab" tabindex="0" aria-label="View image 1" aria-selected="true"></span>
@@ -404,7 +404,7 @@
 
         <div class="project-card hidden">
           <div class="project-image-container">
-            <img src="https://ik.imagekit.io/alwaysuday/7.png?updatedAt=1761032475527" alt="Arithmetic Formatter Screenshot" class="project-image" loading="lazy" width="600" height="400">
+            <img id="arith-img-1" src="https://ik.imagekit.io/alwaysuday/7.png?updatedAt=1761032475527" alt="Arithmetic Formatter Screenshot" class="project-image" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
           </div>
           <h3>🧮 Arithmetic Formatter</h3>
           <p>A Python project that neatly arranges arithmetic problems vertically and side by side — optionally displaying answers.</p>
@@ -421,7 +421,7 @@
         <div class="project-card hidden">
           <div class="project-image-container">
             <div class="project-images-slideshow" aria-label="Image slideshow">
-              <img id="password-img-1" src="https://ik.imagekit.io/alwaysuday/8.png?updatedAt=1761032475558" alt="Password Generator - Main" class="project-image active" loading="lazy" width="600" height="400">
+              <img id="password-img-1" src="https://ik.imagekit.io/alwaysuday/8.png?updatedAt=1761032475558" alt="Password Generator - Main" class="project-image active" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
             </div>
           </div>
           <h3>🔐 Password Generator</h3>
@@ -440,10 +440,10 @@
         <div class="project-card hidden">
           <div class="project-image-container">
             <div class="project-images-slideshow" aria-label="Image slideshow">
-              <img id="shortest-img-1" src="https://ik.imagekit.io/alwaysuday/9.png?updatedAt=1761032475526" alt="Shortest Path Finder - Graph Builder" class="project-image active" loading="lazy" width="600" height="400">
-              <img id="shortest-img-2" src="https://ik.imagekit.io/alwaysuday/10.png?updatedAt=1761032475572_" alt="Shortest Path Finder - Visualization" class="project-image" loading="lazy" width="600" height="400">
-              <img id="shortest-img-3" src="https://ik.imagekit.io/alwaysuday/11.png?updatedAt=1761032475532" alt="Shortest Path Finder - Path Highlight" class="project-image" loading="lazy" width="600" height="400">
-              <img id="shortest-img-4" src="https://ik.imagekit.io/alwaysuday/12.png?updatedAt=1761032475508" alt="Shortest Path Finder - Result View" class="project-image" loading="lazy" width="600" height="400">
+              <img id="shortest-img-1" src="https://ik.imagekit.io/alwaysuday/9.png?updatedAt=1761032475526" alt="Shortest Path Finder - Graph Builder" class="project-image active" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
+              <img id="shortest-img-2" src="https://ik.imagekit.io/alwaysuday/10.png?updatedAt=1761032475572_" alt="Shortest Path Finder - Visualization" class="project-image" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
+              <img id="shortest-img-3" src="https://ik.imagekit.io/alwaysuday/11.png?updatedAt=1761032475532" alt="Shortest Path Finder - Path Highlight" class="project-image" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
+              <img id="shortest-img-4" src="https://ik.imagekit.io/alwaysuday/12.png?updatedAt=1761032475508" alt="Shortest Path Finder - Result View" class="project-image" loading="lazy" width="600" height="400" role="button" tabindex="0" aria-label="Click to view full size image">
             </div>
             <div class="slideshow-indicators" role="tablist">
               <span class="indicator active" role="tab" tabindex="0" aria-label="View image 1" aria-selected="true"></span>
