New Changes - Fully Updated Website :)

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <div class="follow">
               <p class="followw">Follow me:</p>
               <ul>
-                <li><a href="https://github.com/AlwaysUday006" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><img src="assets/icons8-github-50.png" alt="GitHub" class="social-icon-img"> GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/uday-deore-5949bb32a" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile"><img src="assets/icons8-linkedin-50.png" alt="LinkedIn" class="social-icon-img"> LinkedIn</a></li>
-                <li><a href="mailto:udaydeore006@gmail.com" aria-label="Email"><img src="assets/icons8-email-50.png" alt="Email" class="social-icon-img"> Email</a></li>
+                <li><a href="https://github.com/AlwaysUday006" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i class="fa-brands fa-github"></i> </a></li>
+                <li><a href="https://www.linkedin.com/in/uday-deore-5949bb32a" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i> </a></li>
+                <li><a href="mailto:udaydeore006@gmail.com" aria-label="Email"><i class="fa-solid fa-envelope"></i> </a></li>
               </ul>
             </div>
           </div>
@@ -293,9 +293,9 @@
             </div>
           </div>
           <div class="social-links">
-            <a href="https://github.com/AlwaysUday006" class="social-link" target="_blank" aria-label="GitHub"><img src="assets/icons8-github-50.png" alt="GitHub" class="social-icon-img"></a>
-            <a href="https://www.linkedin.com/in/uday-deore-5949bb32a" class="social-link" target="_blank" aria-label="LinkedIn"><img src="assets/icons8-linkedin-50.png" alt="LinkedIn" class="social-icon-img"></a>
-            <a href="mailto:udaydeore006@gmail.com" class="social-link" aria-label="Email"><img src="assets/icons8-email-50.png" alt="Email" class="social-icon-img"></a>
+            <a href="https://github.com/AlwaysUday006" class="social-link" target="_blank" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/uday-deore-5949bb32a" class="social-link" target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="mailto:udaydeore006@gmail.com" class="social-link" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
           </div>
         </div>
         <div class="contact-form slide-in-right">
@@ -326,9 +326,9 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="footer-social">
-          <a href="https://github.com/AlwaysUday006" target="_blank" aria-label="GitHub"><img src="assets/icons8-github-50.png" alt="GitHub" class="social-icon-img"></a>
-          <a href="https://www.linkedin.com/in/uday-deore-5949bb32a" target="_blank" aria-label="LinkedIn"><img src="assets/icons8-linkedin-50.png" alt="LinkedIn" class="social-icon-img"></a>
-          <a href="mailto:udaydeore006@gmail.com" aria-label="Email"><img src="assets/icons8-email-50.png" alt="Email" class="social-icon-img"></a>
+          <a href="https://github.com/AlwaysUday006" target="_blank" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/uday-deore-5949bb32a" target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="mailto:udaydeore006@gmail.com" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
         </div>
         <p class="footer-copy">© 2025 Uday Deore. All Rights Reserved.</p>
       </div>
